--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
 body {
     text-align: center;
+    background-color: antiquewhite;
+    color: rgb(104, 62, 29);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+label {
+    margin: auto 20px;
+}
+
+input {
+    padding: 10px;
+}
+
+button {
+    width: 50%;
+    margin: 20px auto;
+    padding: 10px;
+}
+
+
+.list {
+
+}
+
+.item {
+    background: rgb(255, 255, 255, 0.5);
+    border: 2px dotted brown;
+    border-radius: 10px;
+    margin: 20px 10px;
+    padding: 20px;
+
 }
